--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
+      - name: Install setuptools-scm
+        run: pip install setuptools_scm
       - name: Build package
         run: python setup.py sdist
       - name: Publish distribution 📦 to Test PyPI
