--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,6 @@ requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+write_to = "indice_pollution/_version.py"
+version_scheme = "python-simplified-semver"
+local_scheme = "no-local-version"
