--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@master
+      - run: git fetch --prune --unshallow --tags
       - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
