--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -22,13 +22,13 @@ jobs:
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
       - name: Publish distribution 📦 to Test PyPI
-        if: ${{ steps.extract_branch.outputs.branch  == 'master' }}
+        if: ${{ steps.extract_branch.outputs.branch  == 'master' }} || (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags'))
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution 📦 to PyPI
-        if: ${{ steps.extract_branch.outputs.branch  == 'master' }}
+        if: ${{ steps.extract_branch.outputs.branch  == 'master' }} || (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags'))
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
