Ajout premier test

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,7 @@ install_requires =
   sentry-sdk[flask]
   sqlalchemy
   redis
+
+[tool:pytest]
+testpaths = tests
+mocked-sessions=indice_pollution.extensions.db.session
