Ajout test automatique

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,15 @@ install_requires =
   sqlalchemy
   redis
 
+[options.extras_require]  # in setup.cfg
+test =
+    pytest
+    pytest-alembic
+    pytest-flask-sqlalchemy
+    pytest-postgresql
+    pytest-mock
+    requests-mock
+
 [tool:pytest]
 testpaths = tests
 mocked-sessions=indice_pollution.extensions.db.session
